// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`load_thread tool loading threads successfully should filter comments by date 1`] = `
"# Thread: Test Thread

**Thread ID:** 12345
**Channel:** Test Channel
**Workspace ID:** 11111
**Creator:** Test User 1 (22222)
**Posted:** 2024-01-01T00:00:00.000Z
**Comments:** 0
**Archived:** No
**In Inbox:** Yes

## Content

Test thread content

## Comments (0)

## Participants

Test User 1 (22222)"
`;

exports[`load_thread tool loading threads successfully should handle thread with no comments 1`] = `
"# Thread: Test Thread

**Thread ID:** 12345
**Channel:** Test Channel
**Workspace ID:** 11111
**Creator:** Test User 1 (22222)
**Posted:** 2024-01-01T00:00:00.000Z
**Comments:** 0
**Archived:** No
**In Inbox:** Yes

## Content

Test thread content

## Comments (0)

## Participants

Test User 1 (22222)"
`;

exports[`load_thread tool loading threads successfully should load thread with comments and participants 1`] = `
"# Thread: Test Thread

**Thread ID:** 12345
**Channel:** Test Channel
**Workspace ID:** 11111
**Creator:** Test User 1 (22222)
**Posted:** 2024-01-01T00:00:00.000Z
**Comments:** 0
**Archived:** No
**In Inbox:** Yes

## Content

Test thread content

## Comments (2)

### Comment 54321
**Creator:** Test User 1 (22222) | **Posted:** 2024-01-01T00:00:00.000Z

Test comment content

### Comment 54322
**Creator:** Test User 2 (44444) | **Posted:** 2024-01-01T00:00:00.000Z

Test comment content

## Participants

Test User 1 (22222), Test User 2 (44444)"
`;

exports[`load_thread tool loading threads successfully should load thread without participants when includeParticipants is false 1`] = `
"# Thread: Test Thread

**Thread ID:** 12345
**Channel:** Test Channel
**Workspace ID:** 11111
**Creator:** Test User 1 (22222)
**Posted:** 2024-01-01T00:00:00.000Z
**Comments:** 0
**Archived:** No
**In Inbox:** Yes

## Content

Test thread content

## Comments (0)
"
`;
